<resources>
    <string name="app_name">WallaCHANGE</string>
    <string name="facebook_app_id" translatable="false">331745477228111</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="lenguage_eng">eng</string>
    <string name="lenguage_cat">cat</string>
    <string name="lenguage_esp">esp</string>
    <string name="user_eng">User:</string>
    <string name="user_cat">Usuari:</string>
    <string name="navigationHome_eng">Home</string>
    <string name="navigationNewItem_eng">New Item</string>
    <string name="navigationProfile_eng">Profile</string>
    <string name="navigationOffer_eng">Exchange offer</string>
    <string name="navigationSearchItem_eng">Search Items</string>
    <string name="navigationSearchUser_eng">Search Users</string>
    <string name="navigationLogout_eng">Log out</string>
    <string name="navigationConfiguration_eng">Configuration</string>
    <string name="navigationHome_cat">Inici</string>
    <string name="navigationNewItem_cat">Nou ítem</string>
    <string name="navigationProfile_cat">Perfil</string>
    <string name="navigationSearchItem_cat">Búsqueda d"'"elements</string>
    <string name="navigationSearchUser_cat">Búsqueda d"'"usuaris</string>
    <string name="navigationLogout_cat">Tancar sessió</string>
    <string name="navigationOpen">Open navigation drawer</string>
    <string name="navigationClose">Close navigation drawer</string>
    <string name="logout_dialog_1_eng">Log out</string>
    <string name="logout_dialog_2_eng">Do you wanna leave?</string>
    <string name="logout_dialog_3_eng">Exit</string>
    <string name="logout_dialog_4_eng">Cancel</string>
    <string name="logout_dialog_1_cat">Tancar sessió</string>
    <string name="logout_dialog_2_cat">Vols sortir?</string>
    <string name="logout_dialog_3_cat">Sortir</string>
    <string name="logout_dialog_4_cat">Cancel·lar</string>
    <string name="twitterKey">ZtNlSehcYLlv24mPgXqqlvRyU</string>
    <string name="twitterSecret">u2HaRQ3dwxiXzqf03tnsrWrLOIvKzHmKlx1HElPDWEHt1m2w5u</string>
    <string name="errorIncorrectLogin_eng">Login with Twitter failure</string>
    <string name="errorAuthEmail_eng">Email not authorited</string>
    <string name="loginWallachange">WALLACHANGE</string>
    <string name="errorIncorrectLogin_cat">Error a l"'"iniciar sessió amb Twitter</string>
    <string name="errorAuthEmail_cat">Email no autoritzat</string>
    <string name="searchButton_eng">SEARCH</string>
    <string name="filterButton_eng">FILTER</string>
    <string name="searchButton_cat">CERCA</string>
    <string name="filterButton_cat">FILTRA</string>
    <string name="viewElementReport_eng">Report</string>
    <string name="viewElementHelp_eng">Help</string>
    <string name="viewElementReport_cat">Report</string>
    <string name="viewElementHelp_cat">Ajuda</string>
    <string name="viewOtherProfileElement_eng">ELEMENTS:</string>
    <string name="viewOtherProfileElement_cat">ELEMENTS:</string>
    <string name="offerExchangeElement_eng">YOUR ELEMENTS:</string>
    <string name="offerExchangeSend_eng">Send offer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_picture_eng">Add pictures</string>
    <string name="title_eng">Title</string>
    <string name="description_eng">Description</string>
    <string name="category_eng">Category</string>
    <string name="type_of_product_eng">Type of product</string>
    <string name="type_of_exchange_eng">Type of exchange</string>
    <string name="product_eng">Product</string>
    <string name="experience_eng">Experience</string>
    <string name="permanent_eng">Permanent</string>
    <string name="temporal_eng">Temporal</string>
    <string name="duration_eng">Duration</string>
    <string name="the_advertisement_must_have_a_title_eng">The advertisement must have a title</string>
    <string name="these_fields_must_be_filled_eng">These fields must be filled</string>
    <string name="at_least_one_image_eng">At least one image</string>
    <string name="advertisements_title_eng">Advertisement\'s title</string>
    <string name="advertisements_description_eng">Advertisement\'s description</string>
    <string name="advertisements_category_eng">Advertisement\'s category</string>
    <string name="this_field_is_required_eng">This field is required</string>
    <string name="if_product_at_least_one_image_eng">If product, at least one image</string>
    <string name="created_by_eng">Created by</string>
    <string name="from_you_eng">from you</string>
    <string name="trade_eng">Trade</string>
    <string name="write_here_your_comment_eng">Write here your comment</string>
    <string name="advertisements_view">Advertisement\'s view</string>
    <string name="ok_eng">Ok</string>
    <string name="add_picture_cat">Afegir imatges</string>
    <string name="title_cat">Títol</string>
    <string name="description_cat">Descripció</string>
    <string name="category_cat">Categoria</string>
    <string name="type_of_product_cat">Tipus de producte</string>
    <string name="type_of_exchange_cat">Tipus d"'"intercanvi</string>
    <string name="product_cat">Producte</string>
    <string name="experience_cat">Experiència</string>
    <string name="permanent_cat">Permanent</string>
    <string name="temporal_cat">Temporal</string>
    <string name="duration_cat">Durada</string>
    <string name="the_advertisement_must_have_a_title_cat">L"'"anunci ha de tenir títol</string>
    <string name="these_fields_must_be_filled_cat">Aquests camps no poden estar buits</string>
    <string name="at_least_one_image_cat">Mínim una imatge</string>
    <string name="advertisements_title_cat">Títol de l"'"anunci</string>
    <string name="advertisements_description_cat">Descripció de l"'"anunci</string>
    <string name="advertisements_category_cat">Categoria de l"'"anunci</string>
    <string name="this_field_is_required_cat">Aquest camp és obligatòri</string>
    <string name="if_product_at_least_one_image_cat">Si hi ha producte, al menys una imatge</string>
    <string name="created_by_cat">Creat per</string>
    <string name="from_you_cat">per tu</string>
    <string name="trade_cat">Intercanvi</string>
    <string name="write_here_your_comment_cat">Escriu el teu comentari</string>
    <string name="ok_cat">Ok</string>
    <string name="city_eng">City</string>
    <string name="products_eng">Products</string>
    <string name="preference_eng">Preference</string>
    <string name="preferences_eng">Preferences</string>
    <string name="rating_eng">Rating</string>
    <string name="saveProfile_eng">Save</string>
    <string name="cancelProfile_eng">Cancel</string>
    <string name="errorExistingPref_eng">Existing preference</string>
    <string name="errorEmptyField_eng">This field is empty</string>
    <string name="add_image_button_eng">Add image button</string>
    <string name="contentDeleteImage" translatable="false">contentDeleteImage</string>
    <string name="userPicture">user picture</string>
    <string name="clearEditText" translatable="false">clear edit text</string>
    <string name="addPreference">add preference</string>
    <string name="messageOK_eng">Profile changes updated successfully</string>
    <string name="city_cat">Ciutat</string>
    <string name="products_cat">Productes</string>
    <string name="preference_cat">Preferència</string>
    <string name="preferences_cat">Preferències</string>
    <string name="rating_cat">Puntuació</string>
    <string name="saveProfile_cat">Guardar</string>
    <string name="cancelProfile_cat">Cancel·lar</string>
    <string name="errorExistingPref_cat">La preferència ja existeix</string>
    <string name="errorEmptyField_cat">Aquest camp està buit</string>
    <string name="add_image_button_cat">Botó per a afegir imatge</string>
    <string name="messageOK_cat">Canvis guardats correctament.</string>
    <string name="search_eng">Search...</string>
    <string name="filter_eng">FILTER</string>
    <string name="search_cat">Cerca...</string>
    <string name="filter_cat">FILTRA</string>
    <string name="API_URL">http://localhost:3000/</string>
    <string name="ADD_USER">addUser</string>
    <string name="GET_USER">user/</string>
    <string name="GET_ALL_USERS">allUsers</string>
    <string name="GET_IMATGE_USER">/imatge</string>
    <string name="LOGIN">login</string>
    <string name="LOGIN_FB">loginFB</string>
    <string name="SET_IMATGE_USER">imatge/</string>
    <string name="DELETE_USER">deleteUser/</string>
    <string name="UPDATE_USER">updateUser</string>
    <string name="temporality_eng">Temporality</string>
    <string name="edit_description_here_eng">Edit description here</string>
    <string name="empty_description_eng">Empty description</string>
    <string name="edit_category_here_eng">Edit category here</string>
    <string name="empty_category_eng">Empty category</string>
    <string name="edit_temporality_here_eng">Edit temporality here</string>
    <string name="empty_temporality_eng">Empty temporality</string>
    <string name="by_eng">By</string>
    <string name="report_advertisement_eng">Report advertisement</string>
    <string name="spam_or_commercial_content_eng">Spam or commercial content</string>
    <string name="adult_content_eng">Adult content</string>
    <string name="racism_and_xenophobia_eng">Racism and xenophobia</string>
    <string name="incitement_to_hatred_eng">Incitement to hatred</string>
    <string name="temporality_cat">Temporalitat</string>
    <string name="edit_description_here_cat">Edita la descripció aquí</string>
    <string name="empty_description_cat">Descripció buida</string>
    <string name="edit_category_here_cat">Edita la categoria aquí</string>
    <string name="empty_category_cat">Categoria buida</string>
    <string name="edit_temporality_here_cat">Edita la temporalitat aquí</string>
    <string name="empty_temporality_cat">Temporalitat buida</string>
    <string name="by_cat">By</string>
    <string name="report_advertisement_cat">Reporta l"'"anunci</string>
    <string name="spam_or_commercial_content_cat">Spam o contingut comercial</string>
    <string name="adult_content_cat">Contingut adult</string>
    <string name="racism_and_xenophobia_cat">Racisme i xenofòbia</string>
    <string name="incitement_to_hatred_cat">Incitament a l"'"odi</string>
    <string name="add_category">Add category</string>
    <string name="errorExistingCategory_eng">Existing category</string>
    <string name="boto_de_la_imatge_anterior">Boto de la imatge anterior</string>
    <string name="boto_de_la_imatge_posterior">Boto de la imatge posterior</string>
    <string name="boto_per_esborrar_la_imatge_actual">Boto per esborrar la imatge actual</string>
    <string name="boto_per_enviar_comentari">Boto per enviar comentari</string>
    <string name="save_changes_eng">Save changes?</string>
    <string name="are_you_sure_you_want_to_save_the_changes_eng">Are you sure you want to save the changes?</string>
    <string name="miniature_image_eng">miniature image</string>
    <string name="delete_miniature_image_button_eng">delete miniature image button</string>
    <string name="edit_button_eng">edit button</string>
    <string name="save_button_eng">save button</string>
    <string name="_2_weeks_1_day">2 weeks, 1 day...</string>
    <string name="clear_title_edit_text_button_eng">clear title edit text button</string>
    <string name="clear_description_edit_text_button_eng">clear description edit text button</string>
    <string name="clear_temporality_edit_text_button_eng">clear temporality edit text button</string>
</resources>