<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationSearchItem"
            android:title="@string/navigationSearchItem_eng"
            android:icon="@drawable/ic_nav_search_item"/>
        <item
            android:id="@+id/navigationSearchUser"
            android:title="@string/navigationSearchUser_eng"
            android:icon="@drawable/ic_nav_search_user"/>
        <!--<item
            android:id="@+id/navigationChat"
            android:title="@string/navigationChat_eng"
            android:icon="@drawable/ic_nav_chat"/>-->
        <item
            android:id="@+id/navigationProfile"
            android:title="@string/navigationProfile_eng"
            android:icon="@drawable/ic_nav_profile"/>
        <item
            android:id="@+id/navigationNewItem"
            android:title="@string/navigationNewItem_eng"
            android:icon="@drawable/ic_nav_new_item"/>
        <item
            android:id="@+id/navigationYourItems"
            android:title="@string/navigationYourItems_eng"
            android:icon="@drawable/ic_nav_your_item"/>
        <item
            android:id="@+id/navigationChat"
            android:title="@string/navigationChat_eng" />
        <item
            android:id="@+id/navigationLogout"
            android:title="@string/navigationLogout_eng"
            android:icon="@drawable/ic_nav_exit"/>
        <item
            android:id="@+id/navigationFilters"
            android:title="juajuajua" />

    </group>
</menu>