<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:scrollbars="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginBottom="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginTop="5pt"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40pt"
                android:gravity="start|center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/userPicture"
                    android:id="@+id/userPicture"
                    android:layout_width="35pt"
                    android:layout_height="35pt"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="2pt"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_userpicture" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_marginStart="16pt"
                    android:text="@string/rating_eng"
                    android:textSize="10pt"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginBottom="5pt"-->
            <!--android:layout_marginTop="5pt"-->
            <!--android:background="@android:color/darker_gray" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30pt"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/city_eng"
                    android:textSize="8pt"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_eng"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:layout_weight="0.591" />

                <ImageView
                    android:contentDescription="@string/clearEditText"
                    android:id="@+id/cleanLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.09"
                    app:srcCompat="@drawable/ic_action_delete" />
            </LinearLayout>

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginBottom="5pt"-->
            <!--android:layout_marginTop="5pt"-->
            <!--android:background="@android:color/darker_gray" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30pt"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/preferences_eng"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addPreference"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.591"
                    android:hint="@string/preference_eng"
                    android:singleLine="true"
                    android:inputType="textPersonName" />

                <ImageView
                    android:contentDescription="@string/addPreference"
                    android:id="@+id/prefAddButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.09"
                    app:srcCompat="@drawable/ic_action_add" />
            </LinearLayout>


            <!--<GridView-->
            <!--android:id="@+id/gridPreferences"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:stretchMode="columnWidth"-->
            <!--android:isScrollContainer="false"-->
            <!--android:orientation="horizontal">-->
            <!--</GridView>-->

            <edu.upc.pes.wallachange.Others.ExpandableHeightGridView
                android:id="@+id/gridPreferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15pt"
                android:layout_marginEnd="5dp"
                android:horizontalSpacing="10dp"
                android:isScrollContainer="false"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp" />


            <!--<View-->
            <!--android:id="@+id/view1"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginBottom="5pt"-->
            <!--android:layout_marginTop="5pt"-->
            <!--android:background="@android:color/darker_gray" />-->

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="30pt"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seeRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating_eng"
                    android:textSize="8pt"
                    android:textStyle="bold" />


                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?attr/ratingBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:theme="@style/RatingBar" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay2"
                android:layout_width="match_parent"
                android:layout_height="30pt"
                android:gravity="end"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelProfile_eng"
                    android:layout_weight="0.50" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:text="@string/saveProfile_eng" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>