<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.upc.pes.wallachange.ViewElementFragment"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginTop="5pt"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titolAnunci"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createdByTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_by_eng"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/temporalitat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="6pt"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_weight="1"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <!--
                <ImageView
                    android:id="@+id/imageViewFotoElement"
                    android:layout_width="100pt"
                    android:layout_height="100pt"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/empty_picture" />

                    -->


                <ImageButton
                    android:id="@+id/previousButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tw__transparent"
                    android:tint="@color/colorPrimary2"
                    app:srcCompat="@android:drawable/ic_media_previous"
                    android:contentDescription="@string/boto_de_la_imatge_anterior"/>

                <ImageSwitcher
                    android:id="@+id/imageViewFotoElement"
                    android:layout_width="100pt"
                    android:layout_height="100pt"
                    app:srcCompat="@drawable/empty_picture" />

                <ImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tw__transparent"
                    android:tint="@color/colorPrimary2"
                    app:srcCompat="@android:drawable/ic_media_next"
                    android:contentDescription="@string/boto_de_la_imatge_posterior"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/esborrarImatge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tw__transparent"
                android:padding="5pt"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/clear_picture"
                android:contentDescription="@string/boto_per_esborrar_la_imatge_actual"/>

            <EditText
                android:id="@+id/editTextDescripcio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="8pt"
                android:background="@android:color/transparent"
                android:hint="@string/description_eng"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="6pt"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:id="@+id/botons_cancel_save"
                android:layout_width="match_parent"
                android:layout_height="30pt"
                android:gravity="end"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/tradeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trade_eng" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.97"
                    android:ems="10"
                    android:hint="@string/write_here_your_comment_eng"
                    android:singleLine="true"/>

                <ImageButton
                    android:id="@+id/writeComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/tw__transparent"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@android:drawable/ic_menu_send"
                    android:contentDescription="@string/boto_per_enviar_comentari"/>
            </LinearLayout>

                <edu.upc.pes.wallachange.Others.ExpandableHeightGridView
                    android:id="@+id/comments_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:horizontalSpacing="10dp"
                    android:isScrollContainer="false"
                    android:stretchMode="columnWidth"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:verticalSpacing="10dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>